--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,20 @@
-﻿fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-pymysql==1.1.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-bcrypt==4.1.2
+﻿fastapi==0.123.5
+uvicorn==0.38.0
+
+sqlalchemy==2.0.44
+pymysql==1.1.2
+
+pydantic==2.12.5
+pydantic-settings==2.12.0
+annotated-types==0.7.0
+typing-extensions==4.15.0
+
+python-dotenv==1.2.1
+python-multipart==0.0.20
+
+bcrypt==5.0.0
 passlib[bcrypt]==1.7.4
+
+reportlab==4.4.7
+pillow==12.1.0
+cryptography==46.0.3
