--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && node postbuild.js",
     "start": "next start",
     "lint": "eslint .",
     "clean": "rm -rf .next out node_modules/.cache"
