--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "input-otp": "1.4.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.454.0",
-    "next": "15.1.4",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
@@ -70,6 +70,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
