App con nueva arquitectura

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,4 @@
-const fs = require('fs');
-const path = require('path');
-
-const htaccessContent = `# Redirección HTTPS
+# Redirección HTTPS
 RewriteEngine On
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
@@ -17,14 +14,3 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /index.html [L,QSA]
-`;
-
-const htaccessPath = path.join(__dirname, '.htaccess');
-
-try {
-  fs.writeFileSync(htaccessPath, htaccessContent);
-  console.log('✅ .htaccess creado exitosamente para SSR');
-} catch (error) {
-  console.error('❌ Error creando .htaccess:', error);
-  process.exit(1);
-}
