--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && node postbuild.js && node create-htaccess.js",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
-    "clean": "rm -rf .next out node_modules/.cache"
+    "lint": "next lint",
+    "clean": "rm -rf .next out node_modules/.cache",
+    "postbuild": "node postbuild.js && node create-htaccess.js"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -39,7 +44,6 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "1.3.1",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -65,15 +69,16 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.9",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.23",
     "baseline-browser-mapping": "^2.9.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.2",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
